RESOLVED FIXED170291
[WK2] Touches should not cancel when showing a custom action sheet while data interaction is active
https://bugs.webkit.org/show_bug.cgi?id=170291
Summary [WK2] Touches should not cancel when showing a custom action sheet while data...
Wenson Hsieh
Reported 2017-03-30 12:23:39 PDT
Attachments
Patch (11.44 KB, patch)
2017-03-30 12:34 PDT, Wenson Hsieh
thorton: review+
Patch for landing (19.53 KB, patch)
2017-03-30 13:50 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-03-30 12:34:30 PDT
Wenson Hsieh
Comment 2 2017-03-30 13:50:56 PDT
Created attachment 305897 [details] Patch for landing
WebKit Commit Bot
Comment 3 2017-03-30 14:33:11 PDT
Comment on attachment 305897 [details] Patch for landing Clearing flags on attachment: 305897 Committed r214625: <http://trac.webkit.org/changeset/214625>
Note You need to log in before you can comment on or make changes to this bug.